--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
+ALPHAVANTAGE_API_KEY1 = "KOKIF9V2"
+ALPHAVANTAGE_API_KEY2 = "E1H277QR"
 
+GOOGLE_SHEET_ID1 = "11-rdih0gaGf-SQCcJ"
+GOOGLE_SHEET_ID2 = "Bja2ae78l9KmQ4JXpoPtFuv01Y"
+
+account_sid1 = "ACfe68e281d9b09"
+account_sid2 = "e607ef08ecf6bf6a2ec"
+
+auth_token1 = "a8b8f48306498e"
+auth_token2 = "3277b2e8ead652ea02"
