new google api credentials

--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 ALPHAVANTAGE_API_KEY1 = "KOKIF9V2"
 ALPHAVANTAGE_API_KEY2 = "E1H277QR"
 
-GOOGLE_SHEET_ID1 = "1c0cm9iEwx4PQGGzWxuUG"
-GOOGLE_SHEET_ID2 = "8WHk3xvwLIiKoYYmss1qIEs"
+GOOGLE_SHEET_ID = "1c0cm9iEwx4PQGGzWxuUG8WHk3xvwLIiKoYYmss1qIEs"
 
 account_sid1 = "ACfe68e281d9b09"
 account_sid2 = "e607ef08ecf6bf6a2ec"
