--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,9 @@
- 
+    
 dist: xenial
 language: python
 python:
-  python:
-  - 2.7
-  - 3.4
-  - 3.5]
-  - "3.6"
-  - 3.6
   - "3.7"
-  -3.7
- # command to install dependencies
-install:
+install: #install step to be run on the server 
   - pip install -r requirements.txt
-# command to run tests
 script:
   - pytest
